--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -336,3 +336,14 @@ Code taken from here: https://codepen.io/svnt/pen/beEgre
 video {
     padding:1rem;
 }
+
+.graph {
+    width: 90%;
+    border: 1px solid lightgray;
+}
+.small_graph {
+    diplay: inline-block;
+    width: 300px;
+    height: 300px;
+    border: 1px solid lightgray;
+}
