--- a/templates/confabulation/participant_graph.html
+++ b/templates/confabulation/participant_graph.html
@@ -35,9 +35,11 @@
      },
      physics:{
          barnesHut:{
-             centralGravity: 0.2,
-             gravitationalConstant: -5000,
-             springConstant: 0.2,
+             centralGravity: 0.01,
+             gravitationalConstant: -10000,
+             springConstant: 0.4,
+             springLength: 200,
+             damping: 0.5,
          },
      }
  };
