--- a/templates/confabulation/graph.html
+++ b/templates/confabulation/graph.html
@@ -1,44 +1,8 @@
-{% for p in participant_graphs %}
-<h3>{{p.name}}</h3>
-<div class="graph small_graph" id="graph_{{p.name}}"></div>
-{% endfor %}
 <h3>All stories</h3>
 <div class="graph" id="graph1"></div>
 
 <script type="text/javascript">
 
- // create an array with edges
-
-{% for p in participant_graphs %}
- var nodes_{{p.name}} = new vis.DataSet([
-     {{ p.nodes|safe }}
- ]);
-
- var edges_{{p.name}} = new vis.DataSet([
-     {{ p.edges|safe }}
- ]);
-
- // create a network
- var container_{{p.name}} = document.getElementById('graph_{{p.name}}');
-
- // provide the data in the vis format
- var data_{{p.name}} = {
-     nodes: nodes_{{p.name}},
-     edges: edges_{{p.name}},
- };
- var options_{{p.name}} = {
-     layout: {
-         improvedLayout: false,
-     },
-     groups:{
-         useDefaultGroups: true,
-         {{p.group|safe}}
-    }
- };
-
- // initialize your network!
- var network = new vis.Network(container_{{p.name}}, data_{{p.name}}, options_{{p.name}});
- {% endfor %}
 
 
  /* Big graph with all stories */
@@ -47,17 +11,19 @@
      {% for p in participant_graphs %}
      {{ p.nodes|safe }},
      {% endfor %}
+     {{ story_to_participant_graph.nodes|safe}},
  ]);
 
  var edges = new vis.DataSet([
      {% for p in participant_graphs %}
      {{ p.edges|safe }},
      {% endfor %}
+     {{ story_to_participant_graph.edges|safe}},
 
  ]);
  /* create a network*/
  var container = document.getElementById('graph1');
- 
+
  /* provide the data in the vis format*/
  var data = {
      nodes: nodes,
@@ -70,18 +36,26 @@
      groups:{
          useDefaultGroups: true,
          {% for p in participant_graphs %}
-         {{ p.group|safe }},
+         {{ p.groups|safe }},
          {% endfor %}
+     },
+     physics:{
+         barnesHut:{
+             centralGravity: 0.4,
+             gravitationalConstant: -3000,
+             springConstant: 0.1,
+         },
      }
- };
- 
+};
+
  /* initialize your network!*/
  var network = new vis.Network(container, data, options);
- network.on("selectNode", function (params) {
-     if (params.nodes.length === 1) {
-         var node = nodes.get(params.nodes[0]);
-         window.open(node.url, '_blank');
-     }
- });
 
+ /* network.on("selectNode", function (params) {
+  *     if (params.nodes.length === 1) {
+  *         var node = nodes.get(params.nodes[0]);
+  *         window.open(node.url, '_blank');
+  *     }
+  * });
+  */
 </script>
