--- a/templates/confabulation/graph.html
+++ b/templates/confabulation/graph.html
@@ -1,4 +1,4 @@
-<h3>All stories</h3>
+<h3>All Themes, Chains and Stories</h3>
 <div class="graph" id="graph1"></div>
 
 <script type="text/javascript">
