sidebar for stories page
also hide togge vutton ig there is no sidebar

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-collapse" id="navbarSupportedContent">
+        {% if sidebar_left %}
         <!-- Toggle button for left sidebar -->
         <input id="sidebar_left_button" type="checkbox" checked title="left sidebar">
-
+        {% endif %}
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -63,7 +64,8 @@
             </li>
         </ul>
         <!-- Toggle button for right sidebar-->
+        {% if sidebar_right %}
         <input id="sidebar_right_button" type="checkbox" checked title="right sidebar">
-
+        {% endif %}
     </div>
 </nav>
