--- a/templates/sidebar_left.html
+++ b/templates/sidebar_left.html
@@ -4,7 +4,7 @@
 <div class="sidebar_left" id="sidebar_left">
 <ul class="list-unstyled  components" >
     {% if sidebar_left.taxonomy %}
-        <h3> Taxonomy </h3>
+        <h3> Color Codes </h3>
             {% for t in sidebar_left.taxonomy %}
         <li>
             <div>
