--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -30,7 +30,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Connects
+                    Connections
                 </a>
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
                     {% for ptype in navigation.connects %}
