remove author and about

--- a/templates/confabulation/error_500.html
+++ b/templates/confabulation/error_500.html
@@ -14,7 +14,7 @@ Well, this is embarrassing... you should not ever see this. Something is not rig
         <a class="btn btn-primary" href="/" role="button">Go back to the Start Page</a>
 
         <div class="tiny">
-            (If you want to help, pls make a note of the url and send it to the author.)</div>
+            (If you want to help, pls make a note of the url and send it to the researcher.)</div>
 </div>
 
 {% endblock %}
