--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,6 @@
 </br>
 For the protection of the photos and videos displayed here, the site is password-protected.
 </br>
-Your username and password were supplied to you by the Author.
+Your username and password were supplied to you by the Researcher.
 </br>
 You only need to do this once. Please log in!
