--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -40,6 +40,18 @@
                     {% endfor %}
                 </ul>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   Graphs
+                </a>
+                <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                    {% for g in navigation.graphs %}
+                    <li>
+                        <a  class="nav-link" tabindex="-1" href="{{g.url}}">{{ g.name}}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </li>
             <li>
                 <div class="search input-group input-group-sm">
                     <form id="searchform" action="/search/" method="get" accept-charset="utf-8">
