--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -3,33 +3,28 @@
 {% block title %}{{site_name}}{% endblock %}
 
 {% block content %}
-<div class="body_text" id="front_body">
-    <div class="row">
-
-        <div class="col">
-        <h1>Welcome</h1>
+<div class="body_text"
+     id="front-body"
+     style="
+     background: url('{{big_graph_url}}');
+     background-repeat: no-repeat;
+     background-position: right bottom;
+     height:800px">
+    <div class="row" >
+        <div class="col" >
+            <h1>            Dear visitor,
+            </h1>
             </br>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            Dear visitor,
-        </br>
         Welcome to the Virtual Album that encompasses the storytelling of {% for p in participants %}<a href="{{p.url}}">{{p.name}}</a>{% if not forloop.last %}, {% endif %} {% endfor %} {% if last %} and <a href="{{last.url}}">{{last.name}}</a>{% endif %}.
             </br>
+            </br>
             From here you can access all the collected <a href="/story/">stories</a>.
-        </br>
-        </br>
         Above you can find a menu through which you can access stories that are confabulations and those which 'go beyond' the visual content of the photographs. There is a menu for the participants' pages, which give further information on the stories. On the left side-bar, you can see a another menu which colour-codes aspects of the stories. On the partcipants pages, there is a side-bar on the right that gives information on stories that connect with each other and in what ways. Here you can also find graphs that visualise these connections. There are separate menus for connections and graphs which synthesise information.
 
-        </div>
-    </div>
-            <div class="row">
-                <div class="col">
+        </br>
+        </br>
 Please be aware that all photos and videos displayed on this site are properties of the participants. They are shared specifically for the purpose of this research, and it is not allowed to copy, publish or otherwise reuse them without their owners consent. For the protection of the participants and the content, you will be asked to log in.
-                </div>
-            </div>
         </div>
     </div>
-</div>
+            </div>
 {% endblock %}
