--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -4,17 +4,15 @@
 
 {% block content %}
 <div class="body_text"
-     id="front-body"
-     style="
-     background: url('{{big_graph_url}}');
-     background-repeat: no-repeat;
-     background-position: right bottom;
-     height:800px">
+     id="front-body">
     <div class="row" >
         <div class="col" >
             <h1>            Dear visitor,
             </h1>
-            </br>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="col" >
         Welcome to the Virtual Album that encompasses the storytelling of {% for p in participants %}<a href="{{p.url}}">{{p.name}}</a>{% if not forloop.last %}, {% endif %} {% endfor %} {% if last %} and <a href="{{last.url}}">{{last.name}}</a>{% endif %}.
             </br>
             </br>
@@ -24,6 +22,9 @@
         </br>
         </br>
 Please be aware that all photos and videos displayed on this site are properties of the participants. They are shared specifically for the purpose of this research, and it is not allowed to copy, publish or otherwise reuse them without their owners consent. For the protection of the participants and the content, you will be asked to log in.
+        </div>
+        <div class="col">
+            <img src="{{ big_graph_url }}" width="500px">
         </div>
     </div>
             </div>
