--- a/templates/confabulation/graphView.html
+++ b/templates/confabulation/graphView.html
@@ -7,7 +7,8 @@
 
 <h1>All Themes, Chains and Stories</h1>
 <h5> What is this?</h5>
-Below you can see the graph generated from all chains, themes and stories. The image is zoomable, and the individual nodes can be dragged around with your mouse.
+Below you can see the graph generated from all chains, themes and stories. The image is zoomable, and the individual nodes can be dragged around with your mouse. This graph is big, so it can take a few minutes to load.
+
 </br>
 Legend:
 <ul>
