graph legend fix

--- a/confabulation/staticfiles/mystyles.css
+++ b/confabulation/staticfiles/mystyles.css
@@ -344,7 +344,7 @@ video {
 }
 .small_graph {
     diplay: inline-block;
-    width: 600px;
+    width: 90%;
     height: 600px;
     border: 1px solid lightgray;
 }
@@ -355,3 +355,7 @@ video {
     max-width: 1500px;
 }
 
+.graph_legend{
+    max-width: 500px;
+    min-width: 300px;
+}
