mechanics for generatting legend

--- a/templates/confabulation/participant_graph.html
+++ b/templates/confabulation/participant_graph.html
@@ -32,7 +32,7 @@
      },
      groups:{
          useDefaultGroups: true,
-         {{groups|safe}},
+         {{groups|safe}}
      },
      physics:{
          barnesHut:{
