--- a/templates/confabulation/graphView.html
+++ b/templates/confabulation/graphView.html
@@ -18,21 +18,22 @@
 
 This page shows the graph generated from all chains, themes and stories. The image is zoomable, and the individual nodes can be dragged around with your mouse. This graph is big, so it can take a few minutes to load.
 </br>
+</br>
 Legend:
 <ul>
     <li>Big circles represent chains <img src="{{legend.chain}}"></li>
     <li>Triangles represent themes<img src="{{legend.theme}}"></li>
     <li>Dots represent stories<img src="{{legend.story}}"></li>
     <li>Yellow edges and backgrounds indicate inter-connections <img src="{{legend.inter}}"></li>
+    <li>Every participant's network has an assigned colour</li>
 </ul>
-Every participant's network has an assigned colour, and the inter-network is yellow.
 </br>
 </br>
-The page programmatically generates the graph. The arrangement of the nodes is calculated by a physical model that includes springs, gravitational forces and repulsion. It is a dynamic representation, if the position of a node changes, the other nodes rearrange themselves around it.
+The page generates the graph programmatically, using a physical model that includes springs, gravitational forces and repulsion. This is a dynamic representation, if the position of a node changes, the other nodes rearrange themselves around it.
 
 </br>
 </br>
-Please be aware that this representation is computation-heavy; consequently, it calculates on the client side, in your browser. Therefore it can make your computer slow or start the ventilation. If this happens, just navigate away.
+Please be aware that it is your computer that performs the calculations to display this graph. Since this representation is computation-heavy, loading this page can make your computer slow or start the ventilation. If this happens, just navigate away.
     </div>
 </div>
 {% endblock %}
